Make links clickable in the status tab comments field

BUG: 266100